Anpassungen für Ausgabe je profil

--- a/src/main/resources/application-comparison-yml.yml
+++ b/src/main/resources/application-comparison-yml.yml
@@ -1,7 +1,7 @@
 someValue: 4711
 
 example:
-    the-greeting: "Hello, World!"
+    the-greeting: "Hello, Comparison!"
     interval: 1000
     precision: 42.23
     servers:
