--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 someValue: 4711
 
 example:
-    the-greeting: "Hello, World!"
+    the-greeting: "Hello, World allgemein!"
     interval: 1000
     precision: 42.23
     servers:
